--- a/software.html
+++ b/software.html
@@ -59,7 +59,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999692428450-backend-software-engineer-java'>Netcentric Backend Software Engineer - Java | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999692428450-backend-software-engineer-java'>Netcentric Backend Software Engineer - Java | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -119,7 +119,7 @@
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ppro/45b4c04c-b389-4eec-8245-7fa06aeb3793'>PPRO - Fullstack Software Engineer - APM Integration (Node.js/TypeScript)</a></h5> 
+<h5><a href='https://jobs.lever.co/ppro/45b4c04c-b389-4eec-8245-7fa06aeb3793'>PPRO - Fullstack Software Engineer - APM Integration (Node.js/TypeScript)</a></h5> 
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -219,7 +219,7 @@
 <p><span class="badge badge-light">Kuala Lumpur Malaysia</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wirecard-asia-holding-pte-ltd.workable.com/j/ACF54E3ED4'>Wirecard Asia - Jobs: Software Engineer, Electronic Data Capturing & Customer Implementation - Apply online</a></h5> 
+<h5><a href='https://wirecard-asia-holding-pte-ltd.workable.com/j/ACF54E3ED4'>Wirecard Asia - Jobs: Software Engineer, Electronic Data Capturing & Customer Implementation - Apply online</a></h5> 
 <p><span class="badge badge-light">Kuala Lumpur Malaysia</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -235,7 +235,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999692424266-sr-aws-cloud-software-engineer-for-global-sportswear-brand-w2-only-no-c2c-'>Aroghia Group Sr. AWS Cloud Software Engineer for Global Sportswear Brand -- W2 only, no C2C! | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999692424266-sr-aws-cloud-software-engineer-for-global-sportswear-brand-w2-only-no-c2c-'>Aroghia Group Sr. AWS Cloud Software Engineer for Global Sportswear Brand -- W2 only, no C2C! | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -255,7 +255,7 @@
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/loandepot/job/oCKAafwQ'>loanDepot Careers - Sr. Software Engineer - Fullstack</a></h5> 
+<h5><a href='http://jobs.jobvite.com/loandepot/job/oCKAafwQ'>loanDepot Careers - Sr. Software Engineer - Fullstack</a></h5> 
 <p><span class="badge badge-light">Irvine California</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -267,7 +267,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/exiger/01131cbd-ce81-408c-8299-fba702512767'>Exiger - Tech - Software Engineer, .NET</a></h5> 
+<h5><a href='https://jobs.lever.co/exiger/01131cbd-ce81-408c-8299-fba702512767'>Exiger - Tech - Software Engineer, .NET</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -291,7 +291,7 @@
 <p><span class="badge badge-light">Bengaluru, India</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='http://fullcontact.applytojob.com/apply/FZJTrKZpfB/Software-Engineer-Foundation-Team'>Software Engineer, Foundation Team - FullContact - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://fullcontact.applytojob.com/apply/FZJTrKZpfB/Software-Engineer-Foundation-Team'>Software Engineer, Foundation Team - FullContact - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -353,7 +353,7 @@ productive, more secure and more sustainable. We are harnessing the.....</p>
 <p><span class="badge badge-light">Albany, NY</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/thinkingphones/jobs/1713682'>Job Application for Senior VoIP Software Engineer at Fuze</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/thinkingphones/jobs/1713682'>Job Application for Senior VoIP Software Engineer at Fuze</a></h5> 
 <p><span class="badge badge-light">Ottawa, ON, Canada</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -409,7 +409,7 @@ productive, more secure and more sustainable. We are harnessing the.....</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/invision/jobs/1793919'>Job Application for Senior Software Engineer at InVision</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/invision/jobs/1793919'>Job Application for Senior Software Engineer at InVision</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -445,7 +445,7 @@ productive, more secure and more sustainable. We are harnessing the.....</p>
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/113134/jobs/4371357002'>Job Application for Sr. Software Engineer (.NET/C#) at Cast & Crew Entertainment Services, LLC</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/113134/jobs/4371357002'>Job Application for Sr. Software Engineer (.NET/C#) at Cast & Crew Entertainment Services, LLC</a></h5> 
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
